# flake8-simplify

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  TODO.md  flake8_simplify.py  mutmut-test.sh  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-lint.in  requirements-lint.txt  setup.cfg  setup.py  sim106-ast.txt  tox.ini
.github/ISSUE_TEMPLATE/: adjust-rule.md  rule-request.md
.github/workflows/: lint.yml  unit-test.yml
flake8_simplify/: __init__.py  constants.py  utils.py
flake8_simplify/rules/: ast_assign.py  ast_bool_op.py  ast_call.py  ast_classdef.py  ast_compare.py  ast_expr.py  ast_for.py  ast_if.py  ast_ifexp.py  ast_subscript.py  ast_try.py  ast_unary_op.py  ast_with.py
requirements/: dev.in  dev.txt  lint.in  lint.txt
tests/: __init__.py  test_100_rules.py  test_200_rules.py  test_300_rules.py  test_400_rules.py  test_900_rules.py  test_simplify.py
