[metadata]
name = flake8_simplify
version = 0.1.0
description = flake8 plugin which checks for code that can be simpified
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MartinThoma/flake8-simplify
author = Martin Thoma
author_email = info@martin-thoma.de
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
py_modules = flake8_simplify
install_requires =
    flake8>=3.7
    importlib-metadata>=0.9;python_version<"3.8"
    astor>=0.1
python_requires = >=3.6.1

[options.entry_points]
flake8.extension =
    SIM=flake8_simplify:Plugin

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
