[metadata]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
name = flake8_simplify

author = Martin Thoma
author_email = info@martin-thoma.de
maintainer = Martin Thoma
maintainer_email = info@martin-thoma.de


version = 0.6.1

description = flake8 plugin which checks for code that can be simpified
long_description = file: README.md
long_description_content_type = text/markdown
keywords = flake8,

url = https://github.com/MartinThoma/flake8-simplify
license = MIT
license_file = LICENSE

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Framework :: Flake8

[options]
py_modules = flake8_simplify
python_requires = >=3.6.1
install_requires =
    flake8>=3.7
    importlib-metadata>=0.9;python_version<"3.8"
    astor>=0.1

[options.entry_points]
flake8.extension =
    SIM=flake8_simplify:Plugin

[tool:pytest]
addopts = --doctest-modules --cov=. --cov-report html:tests/reports/coverage-html --cov-report term-missing --ignore=docs/ --durations=3 --timeout=30
doctest_encoding = utf-8


[mutmut]
backup = False
runner = python -m pytest
tests_dir = tests/

[mypy]
ignore_missing_imports = True
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
